--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       <pre class="code-block">npm run start-dev</pre>
       <p>
         This will start the server, and then you can access the API at
-        <a href="http://localhost:8080/api/tasks"
+        <a href="https://express-intro-starting-point-fvimqno6j.vercel.app/"
           >http://localhost:8080/api/tasks</a
         >
       </p>
